<resources>
    <string name="app_name">CovenantSermons</string>
<!--    <string name="CHANNEL_ID">EXOPLAYER_CHANNEL_ID</string>-->
<!--    <string name="CHANNEL_DESCRIPTION">Plays Sermon Podcasts</string>-->
    <string name="date_hint">01/03/2021</string>
    <string name="sermon_title_hint">Sermon Title</string>
    <string name="sermon_length_hint">22 min</string>
<!--    podcast notification service-->
<!--    <string name="CHANNEL_ID">EXOPLAYER_CHANNEL_ID</string>-->
    <string name="CHANNEL_DESCRIPTION">Plays Sermon Podcasts</string>
<!--    <string name="CHANNEL_ID">Podcast Player Service</string>-->
    <string name="channel_name">Podcast Player Service</string>
    <string name="NOTIFICATION_ID">"100"</string>
    <string name="media_tester">Media Tester</string>
    <string name="donations">Donate</string>
    <string name="sermon_title">Sermon Title</string>
    <string name="app_name_with_space">Covenant Sermons</string>
    <string name="delete">DELETE</string>
    <string name="church_website">Website</string>
    <string name="church_facebook_page">Facebook</string>
    <string name="church_donation">Donate</string>
    <string name="facebook_url">https://www.facebook.com/covenantpresgj</string>
    <string name="website_url">https://www.covpresgj.org/</string>
    <string name="donation_url"><![CDATA[https://secure.squarespace.com/checkout/donate?donatePageId=5c8cff59eb39312e132d7d69&ss_cid=12903880-3688-44a9-af58-e3f2ddef7bf8&ss_cvisit=1617470392322&ss_cvr=463ce3c8-ff16-4daf-8d4b-3c70ec31c440%7C1617470392400%7C1617470392400%7C1617470392400%7C1]]></string>
    <string name="download_down_arrow">Download Down Arrow</string>
    <string name="expandable_cross">Expandable Cross</string>
    <string name="sermon_image">Sermon Image</string>
    <string name="pastor_name">Pastor Name</string>
    <string name="previous">Previous</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="next">Next</string>
</resources>