<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=
        ".MenuExampleActivity" >
    <item
        android:id="@+id/action_church_donation"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/church_donation"/>
    <item
        android:id="@+id/action_church_facebook"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/church_facebook_page"/>
    <item
        android:id="@+id/action_church_website"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/church_website"/>
</menu>